--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-kit",
+  "name": "one-scrap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -30,17 +30,19 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.453.0",
-    "next": "^15.0.1",
+    "next": "^15.0.2",
     "next-themes": "^0.3.0",
-    "react": "^19.0.0-rc-28668d39-20241023",
-    "react-dom": "^19.0.0-rc-28668d39-20241023"
+    "react": "^19.0.0-rc-7c8e5e7a-20241101",
+    "react-dom": "^19.0.0-rc-7c8e5e7a-20241101"
   },
   "lint-staged": {
     "src/*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
       "biome check --write --no-errors-on-unmatched"
     ],
-    "src/*.ts?(x)": ["bun run check-types"]
+    "src/*.ts?(x)": ["bun run check-types"],
+    "src/**/*.{test,spec}.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx}": ["bun run test"]
   },
   "config": {
     "commitizen": {
@@ -64,5 +66,6 @@
     "typescript": "^5",
     "vitest": "^2.1.3"
   },
-  "trustedDependencies": ["@biomejs/biome"]
+  "trustedDependencies": ["@biomejs/biome"],
+  "author": "Shabir Khan"
 }
